--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: "mongo:latest"
     ports:
       - "27017:27017"
-  api:
+  web:
     image: express-app
     build:
       context: .
