--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "clean": "rm -rf dist",
     "build": "npm run clean && tsc",
-    "start": "concurrently \"npm run build\" \"node dist/js/index.js\"",",
-    "dev": "concurrently \"tsc -w\" \"nodemon dist/js/index.js\"",
+    "prestart": "npm run build",
+    "start": "node dist/index.js",
+    "dev": "nodemon ./src/index.ts",
     "test": "jest --forceExit --detectOpenHandles  --watchAll --maxWorkers=1"
   },
   "keywords": [],
@@ -22,8 +24,9 @@
     "mongoose": "^6.8.4",
     "mongoose-auto-increment": "^5.0.1",
     "prettier": "^2.8.3",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^4.6.0",
+    "swagger-jsdoc": "4.0.0",
+    "swagger-ui-express": "^4.1.6",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
@@ -35,7 +38,6 @@
     "@types/mongoose-auto-increment": "^5.0.35",
     "@types/node": "^18.11.18",
     "@types/supertest": "^2.0.12",
-    "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
     "concurrently": "^7.6.0",
     "nodemon": "^2.0.20",
